# soroscope

./: CONTRIBUTING.md  Cargo.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: main.rs
contracts/cpu_heavy/: Cargo.toml
contracts/cross_call/src/: test.rs
contracts/factory/src/: lib.rs  test.rs
contracts/liquidity_pool/: Cargo.toml
contracts/liquidity_pool/src/: fuzz_test.rs  lib.rs  test.rs
contracts/liquidity_pool/test_snapshots/test/: test_deposit_when_paused.1.json  test_pause_and_unpause.1.json  test_swap_when_paused.1.json  test_token_interface.1.json  test_withdraw_when_paused.1.json
contracts/storage_heavy/test_snapshots/test/: test_batch_storage.1.json  test_storage.1.json
contracts/token/src/: test.rs
core/: Cargo.toml
core/src/: main.rs  simulation.rs
docs/: good-first-issues.md
web/: package-lock.json
